--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -32,6 +32,13 @@
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
         "  <br>\n",
+        " <font color=gray>v.2.1.0 (31/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Fix bugs when Web UI can't starting if <code>use_anapnoe_ui</code> set to <b>True</b></li>\n",
+        "    <li>Changed <code>use_anapnoe_ui</code> logic by downloading and unpacking separate repo instead of <code>git remote origin set-url</code> and <code>git reset --hard</code></li>\n",
+        "    <li>Added <b>Theme Selector</b> section to changed default (anapnoe-webui) theme before starting Web UI</li>\n",
+        "  </ul>\n",
+        "  <br>\n",
         " <font color=gray>v.2.0.1 (27/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Clean install and update Web UI to latest version, commit hash : <code>955df7751eef11bb7697e2d77f6b8a6226b21e13</code></li>\n",
@@ -220,9 +227,6 @@
         "# @markdown ### Anapnoe UI/UX Config\n",
         "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
         "\n",
-        "ui_commit_hash = \"608c684b0f5794b13b6cadc0ee76f584edff24ec\"  # @param {type:'string'}\n",
-        "stable_commit_hash = \"3b47b000199ea8baf724080936ef985f53b3d081\"\n",
-        "\n",
         "# @markdown ### Drive Config\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
         "output_to_drive = False  # @param {type:'boolean'}\n",
@@ -241,10 +245,11 @@
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
+        "repo_type = \"webui\" if not use_anapnoe_ui else \"anapnoe-webui\"\n",
         "package_url = [\n",
-        "    \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui.tar.lz4\",\n",
-        "    \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
-        "    \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-cache.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-deps.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-cache.tar.lz4\",\n",
         "]\n",
         "\n",
         "\n",
@@ -258,12 +263,12 @@
         "    shutil.rmtree(dst)\n",
         "\n",
         "\n",
-        "def pre_download():\n",
-        "    for package in tqdm(package_url, desc=\"\u001b[1;32mUnpacking WebUI\"):\n",
+        "def pre_download(desc):\n",
+        "    for package in tqdm(package_url, desc=desc):\n",
         "        with capture.capture_output() as cap:\n",
         "            package_name = os.path.basename(package)\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {root_dir} -o {package_name} {package}\n",
-        "            if package_name == \"webui-deps.tar.lz4\":\n",
+        "            if package_name == f\"{repo_type}-deps.tar.lz4\":\n",
         "                !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.9/dist-packages/\n",
         "            else:\n",
         "                !tar -xI lz4 -f {package_name} --directory=/\n",
@@ -295,6 +300,14 @@
         "        json.dump(config, f, indent=4)\n",
         "\n",
         "\n",
+        "def install_webui():\n",
+        "    desc = \"\u001b[1;32mUnpacking Webui\"\n",
+        "\n",
+        "    if use_anapnoe_ui:\n",
+        "        print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
+        "\n",
+        "    pre_download(desc)\n",
+        "    \n",
         "start_time = time.time()\n",
         "\n",
         "if mount_drive:\n",
@@ -319,10 +332,10 @@
         "    if os.path.exists(repo_dir):\n",
         "        print(\"\u001b[1;32mUninstall current Web UI...\")\n",
         "        shutil.rmtree(repo_dir)\n",
-        "        pre_download()\n",
+        "        install_webui()\n",
         "else:\n",
         "    if not os.path.exists(repo_dir):\n",
-        "        pre_download()\n",
+        "        install_webui()\n",
         "    else:\n",
         "        print(\"\u001b[1;32mAlready installed, skipping...\")\n",
         "\n",
@@ -335,51 +348,6 @@
         "        print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
         "    except Exception as e:\n",
         "        print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
-        "\n",
-        "if use_anapnoe_ui:\n",
-        "    print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
-        "    try:\n",
-        "        os.chdir(repo_dir)\n",
-        "        if stable_commit_hash:\n",
-        "            try:\n",
-        "                with capture.capture_output() as cap:\n",
-        "                    !git reset --hard {stable_commit_hash}\n",
-        "                del cap\n",
-        "                print(\"\u001b[1;32mForce reset to Commit hash: \", stable_commit_hash)\n",
-        "            except Exception as e:\n",
-        "                print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)    \n",
-        "\n",
-        "\n",
-        "        config = read_config(config_file)\n",
-        "        if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
-        "            config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
-        "            config[\"disabled_extensions\"].append(\"stable-diffusion-webui-state\")\n",
-        "            write_config(config_file, config)\n",
-        "\n",
-        "        with capture.capture_output() as cap:\n",
-        "            !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
-        "            !git pull\n",
-        "            \n",
-        "            del cap\n",
-        "\n",
-        "        if ui_commit_hash:\n",
-        "            try:\n",
-        "                with capture.capture_output() as cap:\n",
-        "                    !git reset --hard {ui_commit_hash}\n",
-        "                    del cap\n",
-        "                print(\"\u001b[1;32mUI Commit hash: \", ui_commit_hash)\n",
-        "            except Exception as e:\n",
-        "                print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
-        "\n",
-        "        !sed -i -e 's/checkout {commithash}/checkout --force {commithash}/g' /content/stable-diffusion-webui/launch.py\n",
-        "\n",
-        "    except Exception as e:\n",
-        "        print(\"\u001b[1;32mAn error occurred:\", e)\n",
-        "else:\n",
-        "    config = read_config(config_file)\n",
-        "    if \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
-        "        config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
-        "        write_config(config_file, config)\n",
         "\n",
         "if git_pull:\n",
         "    try:\n",
@@ -400,11 +368,11 @@
         "        !git apply {patches_dir}/stablediffusion-lowram.patch\n",
         "\n",
         "    if colab_optimizations:\n",
-        "        !sed -i \"s@os.path.splitext(checkpoint_.*@os.path.splitext(checkpoint_file); map_location='cuda'@\" /content/stable-diffusion-webui/modules/sd_models.py\n",
-        "        !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' /content/stable-diffusion-webui/webui.py\n",
+        "        !sed -i \"s@os.path.splitext(checkpoint_.*@os.path.splitext(checkpoint_file); map_location='cuda'@\" {repo_dir}/modules/sd_models.py\n",
+        "        !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' {repo_dir}/webui.py\n",
         "\n",
         "    if merge_in_vram:\n",
-        "        !sed -i \"s@'cpu'@'cuda'@\" /content/stable-diffusion-webui/modules/extras.py\n",
+        "        !sed -i \"s@'cpu'@'cuda'@\" {repo_dir}/modules/extras.py\n",
         "    del cap\n",
         "\n",
         "if output_to_drive:\n",
@@ -644,13 +612,13 @@
         "]\n",
         "\n",
         "annotatorPath = [\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/openpose/hand_pose_model.pth\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/openpose/body_pose_model.pth\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/midas/dpt_hybrid-midas-501f0c75.pt\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd/mlsd_large_512_fp32.pth\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/mlsd/mlsd_tiny_512_fp32.pth\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/hed/network-bsds500.pth\",\n",
-        "    \"/content/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/uniformer/upernet_global_small.pth\"\n",
+        "    f\"{annotator_dir}/openpose/hand_pose_model.pth\",\n",
+        "    f\"{annotator_dir}/openpose/body_pose_model.pth\",\n",
+        "    f\"{annotator_dir}/midas/dpt_hybrid-midas-501f0c75.pt\",\n",
+        "    f\"{annotator_dir}/mlsd/mlsd_large_512_fp32.pth\",\n",
+        "    f\"{annotator_dir}/mlsd/mlsd_tiny_512_fp32.pth\",\n",
+        "    f\"{annotator_dir}/hed/network-bsds500.pth\",\n",
+        "    f\"{annotator_dir}/uniformer/upernet_global_small.pth\"\n",
         "]\n",
         "\n",
         "controlUrl = [\n",
@@ -954,6 +922,9 @@
         "ngrok_token = \"\" # @param {type: 'string'}\n",
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "\n",
+        "# @markdown ### Theme Selector\n",
+        "theme = \"ogxBGreen\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
+        "\n",
         "# @markdown ### Arguments\n",
         "medvram = False # @param {type: 'boolean'}\n",
         "load_in_vram = True # @param {type: 'boolean'}\n",
@@ -976,14 +947,51 @@
         "default_cfg_scale = 7\n",
         "\n",
         "def read_config(filename):\n",
-        "    with open(filename, \"r\") as f:\n",
-        "      config = json.load(f)\n",
+        "    if filename.endswith(\".json\"):\n",
+        "        with open(filename, \"r\") as f:\n",
+        "          config = json.load(f)\n",
+        "    else:\n",
+        "        with open(filename, 'r') as f:\n",
+        "          config = f.read()\n",
+        "\n",
         "    return config\n",
         "\n",
         "\n",
         "def write_config(filename, config):\n",
-        "    with open(filename, \"w\") as f:\n",
-        "      json.dump(config, f, indent=4)\n",
+        "    if filename.endswith(\".json\"):\n",
+        "        with open(filename, \"w\") as f:\n",
+        "            json.dump(config, f, indent=4)\n",
+        "    else:\n",
+        "        with open(filename, 'w', encoding=\"utf-8\") as f:\n",
+        "            f.write(config)\n",
+        "            f.close()  \n",
+        "\n",
+        "\n",
+        "def open_theme(filename):\n",
+        "    themes_folder = os.path.join(repo_dir, \"extensions-builtin/sd_theme_editor/themes\")\n",
+        "    themes_file = os.path.join(themes_folder, f\"{filename}.css\")\n",
+        "    webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
+        "\n",
+        "    style_config = read_config(webui_style_path)\n",
+        "    style_css_contents = style_config.split(\"/*BREAKPOINT_CSS_CONTENT*/\")[1]\n",
+        "\n",
+        "    theme_config = read_config(themes_file)\n",
+        "    style_data = \":host{\" + theme_config + \"}\" + \"/*BREAKPOINT_CSS_CONTENT*/\" + style_css_contents\n",
+        "    write_config(webui_style_path, style_data)\n",
+        "\n",
+        "\n",
+        "def change_theme(filename):\n",
+        "    try:\n",
+        "        with capture.capture_output() as cap:\n",
+        "            !git remote -v\n",
+        "    except Exception as e:\n",
+        "        print(f\"\u001b[1;32mAn error occurred while updating {dir}: {e}\")\n",
+        "\n",
+        "    output = cap.stdout.strip()\n",
+        "    if \"https://github.com/anapnoe/stable-diffusion-webui-ux\" in output:\n",
+        "        open_theme(filename)\n",
+        "    else:\n",
+        "        print(\"You're not using Anapnoe UI/UX, skipping...\\n\")    \n",
         "\n",
         "if auto_model:\n",
         "    models_list = os.listdir(models_dir)\n",
@@ -1023,6 +1031,7 @@
         "config[\"txt2img/Upscaler/value\"] = \"Latent (nearest-exact)\"\n",
         "config[\"txt2img/Denoising strength/value\"] = default_denoising_strength\n",
         "config[\"txt2img/CFG Scale/value\"] = default_cfg_scale\n",
+        "\n",
         "# img2img\n",
         "config[\"img2img/Prompt/value\"] = default_prompt\n",
         "config[\"img2img/Negative prompt/value\"] = default_neg_prompt\n",
@@ -1037,6 +1046,8 @@
         "os.chdir(repo_dir)\n",
         "\n",
         "print(\"\u001b[1;32m\")\n",
+        "\n",
+        "open_theme(theme)\n",
         "\n",
         "!python launch.py \\\n",
         "    --enable-insecure-extension-access \\\n",
