fix: using `change_theme` instead of `open_theme`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1047,7 +1047,7 @@
         "\n",
         "print(\"\u001b[1;32m\")\n",
         "\n",
-        "open_theme(theme)\n",
+        "change_theme(theme)\n",
         "\n",
         "!python launch.py \\\n",
         "    --enable-insecure-extension-access \\\n",
