feat: add reinstall logic

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -263,7 +263,7 @@
         "    shutil.rmtree(dst)\n",
         "\n",
         "\n",
-        "def pre_download(desc):\n",
+        "def pre_download(desc, overwrite=False):\n",
         "    for package in tqdm(package_url, desc=desc):\n",
         "        with capture.capture_output() as cap:\n",
         "            package_name = os.path.basename(package)\n",
@@ -271,7 +271,7 @@
         "            if package_name == f\"{repo_type}-deps.tar.lz4\":\n",
         "                !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.9/dist-packages/\n",
         "            else:\n",
-        "                !tar -xI lz4 -f {package_name} --directory=/\n",
+        "                !tar -xI lz4 -f {package_name} {\"--overwrite-dir\" if overwrite else \"\"} --directory=/\n",
         "            os.remove(package_name)\n",
         "            del cap\n",
         "\n",
@@ -300,14 +300,41 @@
         "        json.dump(config, f, indent=4)\n",
         "\n",
         "\n",
-        "def install_webui():\n",
+        "def install_webui(overwrite):\n",
         "    desc = \"\u001b[1;32mUnpacking Webui\"\n",
         "\n",
         "    if use_anapnoe_ui:\n",
         "        print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
         "\n",
-        "    pre_download(desc)\n",
-        "    \n",
+        "    pre_download(desc, overwrite)\n",
+        "\n",
+        "\n",
+        "def reinstall_webui():\n",
+        "    os.chdir(repo_dir)\n",
+        "    try:\n",
+        "        with capture.capture_output() as cap:\n",
+        "            !git remote -v\n",
+        "    except Exception as e:\n",
+        "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
+        "\n",
+        "    output = cap.stdout.strip()\n",
+        "    os.chdir(root_dir)\n",
+        "    try:\n",
+        "        if use_anapnoe_ui:\n",
+        "          if \"https://github.com/anapnoe/stable-diffusion-webui-ux\" in output:\n",
+        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
+        "          else:\n",
+        "            print(\"\u001b[1;32mReinstall Web UI, use Anapnoe version...\")\n",
+        "            install_webui(overwrite=True)\n",
+        "        else:\n",
+        "          if \"https://github.com/AUTOMATIC1111/stable-diffusion-webui\" in output:\n",
+        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
+        "          else:\n",
+        "            print(\"\u001b[1;32mReinstall Web UI, use Automatic1111 version...\")\n",
+        "            install_webui(overwrite=True)\n",
+        "    except Exception as e:\n",
+        "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
+        "            \n",
         "start_time = time.time()\n",
         "\n",
         "if mount_drive:\n",
@@ -332,12 +359,12 @@
         "    if os.path.exists(repo_dir):\n",
         "        print(\"\u001b[1;32mUninstall current Web UI...\")\n",
         "        shutil.rmtree(repo_dir)\n",
-        "        install_webui()\n",
+        "        install_webui(overwrite=False)\n",
         "else:\n",
         "    if not os.path.exists(repo_dir):\n",
-        "        install_webui()\n",
+        "        install_webui(overwrite=False)\n",
         "    else:\n",
-        "        print(\"\u001b[1;32mAlready installed, skipping...\")\n",
+        "        reinstall_webui()\n",
         "\n",
         "if commit_hash:\n",
         "    try:\n",
@@ -394,6 +421,16 @@
         "\n",
         "end_time = time.time()\n",
         "elapsed_time = int(end_time - start_time)\n",
+        "\n",
+        "config = read_config(config_file)\n",
+        "if use_anapnoe_ui:\n",
+        "    if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
+        "        config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
+        "else:\n",
+        "    if \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
+        "        config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
+        "        write_config(config_file, config)\n",
+        "write_config(config_file, config)\n",
         "\n",
         "if elapsed_time < 60:\n",
         "    print(f\"\u001b[1;32mFinished unpacking. Took {elapsed_time} sec\")\n",
@@ -985,13 +1022,13 @@
         "        with capture.capture_output() as cap:\n",
         "            !git remote -v\n",
         "    except Exception as e:\n",
-        "        print(f\"\u001b[1;32mAn error occurred while updating {dir}: {e}\")\n",
+        "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
         "\n",
         "    output = cap.stdout.strip()\n",
         "    if \"https://github.com/anapnoe/stable-diffusion-webui-ux\" in output:\n",
         "        open_theme(filename)\n",
         "    else:\n",
-        "        print(\"You're not using Anapnoe UI/UX, skipping...\\n\")    \n",
+        "        print(\"You're not using Anapnoe UI/UX, skipping theme selecting...\\n\")    \n",
         "\n",
         "if auto_model:\n",
         "    models_list = os.listdir(models_dir)\n",
