fix: add temporary fix for canvas selector

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -34,6 +34,8 @@
         "  <br>\n",
         " <font color=gray>v.2.1.0 (31/03/23)</font>\n",
         "  <ul>\n",
+        "    <li>Added Reinstall logic</li>  \n",
+        "    <li>Fix bugs when upload images to ControlNet canvas, the images stretched</li>\n",
         "    <li>Fix bugs when Web UI can't starting if <code>use_anapnoe_ui</code> set to <b>True</b></li>\n",
         "    <li>Changed <code>use_anapnoe_ui</code> logic by downloading and unpacking separate repo instead of <code>git remote origin set-url</code> and <code>git reset --hard</code></li>\n",
         "    <li>Added <b>Theme Selector</b> section to changed default (anapnoe-webui) theme before starting Web UI</li>\n",
@@ -166,6 +168,7 @@
         "import zipfile\n",
         "import time\n",
         "import json\n",
+        "import fileinput\n",
         "from google.colab.output import eval_js\n",
         "from google.colab import drive\n",
         "from datetime import timedelta\n",
@@ -223,6 +226,7 @@
         "\n",
         "# url or path\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
+        "webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
         "\n",
         "# @markdown ### Anapnoe UI/UX Config\n",
         "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
@@ -290,14 +294,23 @@
         "\n",
         "\n",
         "def read_config(filename):\n",
-        "    with open(filename, \"r\") as f:\n",
-        "        config = json.load(f)\n",
+        "    if filename.endswith(\".json\"):\n",
+        "        with open(filename, \"r\") as f:\n",
+        "          config = json.load(f)\n",
+        "    else:\n",
+        "        with open(filename, 'r') as f:\n",
+        "          config = f.read()\n",
+        "\n",
         "    return config\n",
         "\n",
         "\n",
         "def write_config(filename, config):\n",
-        "    with open(filename, \"w\") as f:\n",
-        "        json.dump(config, f, indent=4)\n",
+        "    if filename.endswith(\".json\"):\n",
+        "        with open(filename, \"w\") as f:\n",
+        "            json.dump(config, f, indent=4)\n",
+        "    else:\n",
+        "        with open(filename, 'w', encoding=\"utf-8\") as f:\n",
+        "            f.write(config)\n",
         "\n",
         "\n",
         "def install_webui(overwrite):\n",
@@ -422,15 +435,19 @@
         "end_time = time.time()\n",
         "elapsed_time = int(end_time - start_time)\n",
         "\n",
-        "config = read_config(config_file)\n",
+        "\n",
         "if use_anapnoe_ui:\n",
+        "    config = read_config(config_file)\n",
         "    if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
         "        config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
-        "else:\n",
-        "    if \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
-        "        config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
-        "        write_config(config_file, config)\n",
-        "write_config(config_file, config)\n",
+        "    write_config(config_file, config)\n",
+        "\n",
+        "    # temporary fix\n",
+        "    contents = read_config(webui_style_path)\n",
+        "    original_text = 'canvas {\\n    width: 100% !important;\\n'\n",
+        "    modified = 'canvas {\\n    width: auto !important;\\n'\n",
+        "    contents = contents.replace(original_text, modified)\n",
+        "    write_config(webui_style_path, contents)\n",
         "\n",
         "if elapsed_time < 60:\n",
         "    print(f\"\u001b[1;32mFinished unpacking. Took {elapsed_time} sec\")\n",
