feat: set default value of `git_pull` to `True`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -229,7 +229,7 @@
         "webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
         "\n",
         "# @markdown ### Anapnoe UI/UX Config\n",
-        "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
+        "use_anapnoe_ui = False  # @param {type:'boolean'}\n",
         "\n",
         "# @markdown ### Drive Config\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
@@ -237,7 +237,7 @@
         "# @markdown ### Repo Config\n",
         "\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
-        "git_pull = False  # @param {type:'boolean'}\n",
+        "git_pull = True  # @param {type:'boolean'}\n",
         "clean_install = False  # @param {type:'boolean'}\n",
         "load_v2_in_vram = True  # @param {type:'boolean'}\n",
         "merge_in_vram = True  # @param {type:'boolean'}\n",
