fix: forgot to set `use_anapnoe_ui` to True

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -229,7 +229,7 @@
         "webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
         "\n",
         "# @markdown ### Anapnoe UI/UX Config\n",
-        "use_anapnoe_ui = False  # @param {type:'boolean'}\n",
+        "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
         "\n",
         "# @markdown ### Drive Config\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
