fix: disable update extensions for anapnoe ui

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -455,41 +455,44 @@
         "    mins, secs = divmod(elapsed_time, 60)\n",
         "    print(f\"\u001b[1;32mFinished unpacking. Took {mins} mins {secs} sec\")\n",
         "\n",
-        "if update_extensions:\n",
-        "    start_time = time.time()\n",
-        "    extensions_updated = []\n",
-        "    with tqdm(\n",
-        "        total=len(os.listdir(extensions_dir)),\n",
-        "        desc=\"\u001b[1;32mUpdating extensions\",\n",
-        "        mininterval=0,\n",
-        "    ) as pbar:\n",
-        "        for dir in os.listdir(extensions_dir):\n",
-        "            if os.path.isdir(os.path.join(extensions_dir, dir)):\n",
-        "                os.chdir(os.path.join(extensions_dir, dir))\n",
-        "                try:\n",
-        "                    with capture.capture_output() as cap:\n",
-        "                        !git fetch origin\n",
-        "                        !git pull\n",
-        "                except Exception as e:\n",
-        "                    print(f\"\u001b[1;32mAn error occurred while updating {dir}: {e}\")\n",
+        "if not use_anapnoe_ui:\n",
+        "    if update_extensions:\n",
+        "        start_time = time.time()\n",
+        "        extensions_updated = []\n",
+        "        with tqdm(\n",
+        "            total=len(os.listdir(extensions_dir)),\n",
+        "            desc=\"\u001b[1;32mUpdating extensions\",\n",
+        "            mininterval=0,\n",
+        "        ) as pbar:\n",
+        "            for dir in os.listdir(extensions_dir):\n",
+        "                if os.path.isdir(os.path.join(extensions_dir, dir)):\n",
+        "                    os.chdir(os.path.join(extensions_dir, dir))\n",
+        "                    try:\n",
+        "                        with capture.capture_output() as cap:\n",
+        "                            !git fetch origin\n",
+        "                            !git pull\n",
+        "                    except Exception as e:\n",
+        "                        print(f\"\u001b[1;32mAn error occurred while updating {dir}: {e}\")\n",
         "\n",
-        "                output = cap.stdout.strip()\n",
-        "                if \"Already up to date.\" not in output:\n",
-        "                    extensions_updated.append(dir)\n",
-        "                pbar.update(1)\n",
-        "    print(\"\\n\")\n",
-        "    for ext in extensions_updated:\n",
-        "        print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
+        "                    output = cap.stdout.strip()\n",
+        "                    if \"Already up to date.\" not in output:\n",
+        "                        extensions_updated.append(dir)\n",
+        "                    pbar.update(1)\n",
         "\n",
-        "    end_time = time.time()\n",
-        "    elapsed_time = int(end_time - start_time)\n",
+        "        print(\"\\n\")\n",
+        "        for ext in extensions_updated:\n",
+        "            print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
         "\n",
-        "    if elapsed_time < 60:\n",
-        "        print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {elapsed_time} sec\")\n",
-        "    else:\n",
-        "        mins, secs = divmod(elapsed_time, 60)\n",
-        "        print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
+        "        end_time = time.time()\n",
+        "        elapsed_time = int(end_time - start_time)\n",
         "\n",
+        "        if elapsed_time < 60:\n",
+        "            print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {elapsed_time} sec\")\n",
+        "        else:\n",
+        "            mins, secs = divmod(elapsed_time, 60)\n",
+        "            print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
+        "else:\n",
+        "    print(f\"Can't update extensions if you're using Anapnoe UI/UX at the moment.\")\n",
         "    \n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
