fix: add release description for v2.2.0

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -32,6 +32,14 @@
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
         "  <br>\n",
+        " <font color=gray>v.2.2.0 (03/04/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Update Web UI to the latest version</li>\n",
+        "    <li>Update xformers to <code>0.0.18</code></li>\n",
+        "    <li><code>git checkout</code> for extension using <code>Gradio 3.23</code> or above</li>\n",
+        "    <li>If using Anapnoe UI/UX, users can't <code>update_extensions</code> at the moment to prevent code conflict because of different gradio version</li>\n",
+        "  </ul>\n",
+        "  <br>\n",
         " <font color=gray>v.2.1.0 (31/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Added Reinstall logic</li>  \n",
@@ -286,7 +294,7 @@
         "    with capture.capture_output() as cap:\n",
         "        if not \"T4\" in s:\n",
         "            !pip uninstall -y xformers\n",
-        "            !pip install -q xformers==0.0.16 triton==2.0.0\n",
+        "            !pip install -q xformers==0.0.18 triton\n",
         "        del cap\n",
         "\n",
         "    !git config --global user.email \"you@example.com\"\n",
