fix: add cheatsheet and minibook flags

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -19,7 +19,7 @@
         "# [**Cagliostro Colab UI**](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)\n",
         "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab. <br>\n",
         "\n",
-        "[What's New?](https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new) | [Pocketbook Guide](#soon) (soon™️)\n",
+        "[What's New?](https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new) | [Pocketbook Guide](#) (soon™️)\n",
         "\n"
       ],
       "metadata": {
@@ -366,7 +366,8 @@
         "print(\"\u001b[1;32mAll is done! Go to the next step.\")"
       ],
       "metadata": {
-        "id": "A6c7-qjDdb0X"
+        "id": "A6c7-qjDdb0X",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -670,7 +671,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ## **Custom Download Corner**\n",
+        "# @title ## **Custom Download Corner** [Cheatsheet](#) (soon™️)\n",
         "import os\n",
         "import re\n",
         "import time\n",
