--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -74,10 +74,8 @@
         "        \"repo_dir\",\n",
         "        \"tmp_dir\",\n",
         "        \"outputs_dir\",\n",
-        "        \"components_dir\",\n",
         "        \"models_dir\",\n",
         "        \"vaes_dir\",\n",
-        "        \"esrgan_dir\",\n",
         "        \"hypernetworks_dir\",\n",
         "        \"embeddings_dir\",\n",
         "        \"extensions_dir\",\n",
@@ -213,7 +211,7 @@
         "        print(\"\u001b[1;32mMounting google drive...\")\n",
         "        drive.mount(\"/content/drive\")\n",
         "          \n",
-        "print(\"\u001b[1;32mInstalling...\\n\")\n",
+        "print(\"\u001b[1;32mInstalling...\")\n",
         "with capture.capture_output() as cap:\n",
         "    !apt -y update -qq\n",
         "    !apt install unionfs-fuse -qq\n",
@@ -341,7 +339,6 @@
         "                    extensions_updated.append(dir)\n",
         "                pbar.update(1)\n",
         "\n",
-        "    print(\"\\n\")\n",
         "    for ext in extensions_updated:\n",
         "        print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
         "    for ext in skipped_extension:\n",
@@ -351,10 +348,10 @@
         "    elapsed_time = int(end_time - start_time)\n",
         "\n",
         "    if elapsed_time < 60:\n",
-        "        print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {elapsed_time} sec\")\n",
+        "        print(f\"\u001b[1;32mAll extensions are up to date. Took {elapsed_time} sec\")\n",
         "    else:\n",
         "        mins, secs = divmod(elapsed_time, 60)\n",
-        "        print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
+        "        print(f\"\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
         "\n",
         "os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
         "os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
