fix: can't get basename from drive path

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -740,7 +740,7 @@
         "            for dir in [folder_path, category_dir]:\n",
         "                os.makedirs(dir, exist_ok=True)\n",
         "            with capture.capture_output() as cap:    \n",
-        "                !unionfs-fuse {dst_dir}=RW:{folder_path}=RW {category_dir}\n",
+        "                !unionfs-fuse {dst_dir}=RW:\"{folder_path}\"=RW {category_dir}\n",
         "            output = cap.stdout.strip()\n",
         "            if \"fuse: mountpoint is not empty\" in output:\n",
         "                print(f\"\u001b[1;32m{category.capitalize()} folder is not empty and can't be fused, skipping...\")\n",
@@ -852,7 +852,10 @@
         "                unionfuse(folder_path, dst_dir)\n",
         "            else:\n",
         "                custom_download_list.append(url)\n",
-        "                basename = get_filename(url)\n",
+        "                if url.startswith(\"/content/drive/MyDrive/\"):\n",
+        "                    basename = os.path.basename(url)\n",
+        "                else:\n",
+        "                    basename = get_filename(url)\n",
         "\n",
         "                with capture.capture_output() as cap:\n",
         "                    if is_extensions:\n",
