fix: can't fusing path with space + can't copy file from gdrive

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -676,6 +676,7 @@
         "import requests\n",
         "import gc\n",
         "import torch\n",
+        "from pathlib import Path\n",
         "from datetime import timedelta\n",
         "from urllib.parse import urlparse, unquote\n",
         "from IPython.utils import capture\n",
@@ -862,7 +863,7 @@
         "                        os.chdir(extensions_dir)\n",
         "                        !git clone {url}\n",
         "                    elif url.startswith(\"/content/drive/MyDrive/\"):\n",
-        "                        shutil.copy(url, dst_dir)\n",
+        "                        Path(os.path.join(dst_dir, basename)).write_bytes(Path(url).read_bytes())\n",
         "                    elif \"drive.google.com\" in url:\n",
         "                        if \"folders\" in url:\n",
         "                            !gdown --folder \"{url}\" -O {dst_dir} --fuzzy -c\n",
