fix: create dst_dir before fusing folder

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -738,7 +738,7 @@
         "            print(f\"\\n\u001b[1;32m{category.capitalize()} folder can't be fused, skipping...\")\n",
         "        else: \n",
         "            category_dir = os.path.join(os.path.join(root_dir,\"fused\"), category)\n",
-        "            for dir in [folder_path, category_dir]:\n",
+        "            for dir in [folder_path, category_dir, dst_dir]:\n",
         "                os.makedirs(dir, exist_ok=True)\n",
         "            with capture.capture_output() as cap:    \n",
         "                !unionfs-fuse {dst_dir}=RW:\"{folder_path}\"=RW {category_dir}\n",
