fix: add linebreak

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -744,9 +744,9 @@
         "                !unionfs-fuse {dst_dir}=RW:\"{folder_path}\"=RW {category_dir}\n",
         "            output = cap.stdout.strip()\n",
         "            if \"fuse: mountpoint is not empty\" in output:\n",
-        "                print(f\"\u001b[1;32m{category.capitalize()} folder is not empty and can't be fused, skipping...\")\n",
+        "                print(f\"\\n\u001b[1;32m{category.capitalize()} folder is not empty and can't be fused, skipping...\")\n",
         "            else:\n",
-        "                print(f\"\u001b[1;32m{category.capitalize()} folder fused successfully!\")\n",
+        "                print(f\"\\n\u001b[1;32m{category.capitalize()} folder fused successfully!\")\n",
         "    except Exception as e:\n",
         "        print(f\"\\n\u001b[1;32mAn error occurred while fusing the folders: {e}\")\n",
         "\n",
@@ -918,10 +918,10 @@
         "elapsed_time = int(end_time - start_time)\n",
         "\n",
         "if elapsed_time < 60:\n",
-        "    print(f\"\\n\u001b[1;32mDownload completed. Took {elapsed_time} sec\")\n",
+        "    print(f\"\u001b[1;32mDownload completed. Took {elapsed_time} sec\")\n",
         "else:\n",
         "    mins, secs = divmod(elapsed_time, 60)\n",
-        "    print(f\"\\n\u001b[1;32mDownload completed. Took {mins} mins {secs} sec\")\n",
+        "    print(f\"\u001b[1;32mDownload completed. Took {mins} mins {secs} sec\")\n",
         "\n",
         "print(\"\u001b[1;32mAll is done! Go to the next step\")\n",
         "\n",
